src/z80asm/z80asm2/t/40-syntax/expected/dc_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/dc_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/dc_01.asm...
t/40-syntax/input/dc_01.asm:1:3: error: Identifier expected
    dc
      ^
t/40-syntax/input/dc_01.asm:2:4: error: Identifier expected
    dc ,
       ^
t/40-syntax/input/dc_01.asm:3:7: error: Unterminated expression after "="
    dc a1 =
          ^
t/40-syntax/input/dc_01.asm:5:10: error: Unterminated expression after "+"
    dc a1 = 1+
             ^
Program
    DefcStmt
        Location: t/40-syntax/input/dc_01.asm:4:1
        Name: a1
        Expression:
            ExprLiteralInt: 1
    DefcStmt
        Location: t/40-syntax/input/dc_01.asm:6:1
        Name: a1
        Expression:
            ExprSymbol: a2
    DefcStmt
        Location: t/40-syntax/input/dc_01.asm:7:1
        Name: a1
        Expression:
            ExprBinary: +
                LHS:
                    ExprSymbol: a2
                RHS:
                    ExprSymbol: a3
